public class DivingSuit extends Item{

    @Override
    void used(Player p, Activity a);
}
