public abstract class Item {

    public void thrownDown();
    public void pickedUp(Player Picker);
    void diggedUp();
    public void used(Player p, Activity a){} // Activity lett ( enum vs paraméter más a osztály diagrammon)

}
