public class SignalFlarePart extends Item {

    private int partID;

    @Override
    void used(Player p, Activity a);
}
