public class SnowStorm {

    public void tryStorm();
}
