public class UnstableTile extends Tile {

    private int capacity;
    public int standingHere;
}
